--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,20 @@
 NEWS/ChangeLog for itertools
 ----------------------------
 
+0.1-3	2014-2-27
+    o	added "mode" argument to ichunk function
+    o	added iRNGStream and iRNGSubStream functions which could
+	be useful for parallel random number generation.
+    o	added ireaddf function for reading data frames from files
+    o	added writedf.combiner function for writing data frames to files
+    o	added iarray function for creating iterators over arrays
+    o	add ibreak function for creating iterators that can be stopped
+
+0.1-2	2012-6-20
+    o	added irecord and ireplay functions for recording and
+	replaying iterables
+    o	added iter.connection method
+
 0.1-1   2010-1-14
     o	added ichunk function to aid in manual chunking
     o	added utility functions written by Hadley Wickham
